<resources>
    <string name="app_name">Mr Pill</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_quizzes">Quizzes</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="cough_and_cold">Cough and Cold</string>
    <string name="dry_eyes">Dry Eyes</string>
    <string name="chronic_pain">Chronic Pain</string>
    <string name="stomach_conditions">Stomach Conditions</string>
    <string name="skin_conditions">Skin Conditions</string>
    <string name="game_over">Sorry! Try harder next time!</string>

    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>

    <string name="about_message">Mr Pill provides an engaging education resource on differentiating and managing common ailments so that individuals can recognise and manage them when the need arises.\n
        \nUsers are reminded that the advice given by this app does not replace the opinion of a medical professional and need to seek the advise of a pharmacist or doctor in addition to using the app before making any final decisions. If in any doubt, please consult a pharmacist or doctor in addition to using this app, and before making any medical decisions.
    </string>
    <string name="share_message">This is a great app! You should try it out!</string>

    <string name="rewards_message">Rewards</string>
</resources>
